@@ -1,3 +1,6 @@
+17 June 2013: Matthijs
+	- While reading xfr, make sure there are no multiple SOA records.
+
 13 June 2013: Matthijs
 	- Use IPV6 minimum MTU settings with TCP to reduce failures that
 	  are caused by delays in learning working PMTU when communicating
